--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -102,3 +102,35 @@
   width: 100%;
   height: 100%;
 }
+.avatar { 
+  width: 50px; 
+  height: 50px; 
+  clip-path: circle(50px at 50% 50%); 
+  border-radius: 50%;
+}
+.buttonAvatar{
+  background-color: white; /* Green */
+  border: none;
+  color: white;
+  padding: 1px 1px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.dropdown {
+  display: inline-block;
+  position: static;
+  z-index: 1;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
+}
+.ulDropDown {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.liDropDown {
+  padding: 8px 12px;
+  list-style: none;
+}
